corpus/comment.txt
===============
Line
===============

hello world

this is all considered one comment

---

(program (comment))

===============
Command
===============

@comment{this is a comment}
@comment the braces were redundant

---

(program
  (comment_command) (comment)
  (comment_command) (comment)
)
